relinked to new locations, exchanged \ for /

--- a/Data/Monarchs_1996_cleanup.ipynb
+++ b/Data/Monarchs_1996_cleanup.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = sqlite3.connect(\"Monarchs1996.db\")"
+    "db = sqlite3.connect(\"db/Monarchs1996.db\")"
    ]
   },
   {
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"1996 Season Summary.csv\")\n",
+    "df = pd.read_csv(\"csv/1996 Season Summary.csv\")\n",
     "\n",
     "        #convert pandas to SQL table\n",
     "df.to_sql(\"monarchs1996\", db, if_exists=\"replace\")\n",
@@ -92,7 +92,7 @@
        "      <td>index</td>\n",
        "      <td>ix_monarchs1996_index</td>\n",
        "      <td>monarchs1996</td>\n",
-       "      <td>4</td>\n",
+       "      <td>3</td>\n",
        "      <td>CREATE INDEX \"ix_monarchs1996_index\"ON \"monarc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -109,7 +109,7 @@
       ],
       "text/plain": [
        "    type                   name      tbl_name  rootpage  \\\n",
-       "0  index  ix_monarchs1996_index  monarchs1996         4   \n",
+       "0  index  ix_monarchs1996_index  monarchs1996         3   \n",
        "1  table           monarchs1996  monarchs1996         2   \n",
        "\n",
        "                                                 sql  \n",
@@ -539,8 +539,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Wanamingo</td>\n",
-       "      <td>MN</td>\n",
+       "      <td>Wanamingo,\\nMN</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -569,8 +569,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>70</th>\n",
-       "      <td>Oklahoma City</td>\n",
-       "      <td>OK</td>\n",
+       "      <td>Oklahoma City,\\nOK</td>\n",
+       "      <td>None</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>71</th>\n",
@@ -598,18 +598,18 @@
        "</div>"
       ],
       "text/plain": [
-       "         tag_city Tag State\n",
-       "0       Wanamingo        MN\n",
-       "1     Mt. Carroll        IL\n",
-       "2          Wamego        KS\n",
-       "3          Wamego        KS\n",
-       "4          Wamego        KS\n",
-       "..            ...       ...\n",
-       "70  Oklahoma City        OK\n",
-       "71         Topeka        KS\n",
-       "72         Duluth        MN\n",
-       "73         Dallas        TX\n",
-       "74            NaN       NaN\n",
+       "              tag_city Tag State\n",
+       "0       Wanamingo,\\nMN      None\n",
+       "1          Mt. Carroll        IL\n",
+       "2               Wamego        KS\n",
+       "3               Wamego        KS\n",
+       "4               Wamego        KS\n",
+       "..                 ...       ...\n",
+       "70  Oklahoma City,\\nOK      None\n",
+       "71              Topeka        KS\n",
+       "72              Duluth        MN\n",
+       "73              Dallas        TX\n",
+       "74                 NaN       NaN\n",
        "\n",
        "[75 rows x 2 columns]"
       ]
@@ -620,7 +620,7 @@
     }
    ],
    "source": [
-    "df.loc[df['Where Tagged'].str.contains(\"\\n\", na=False), \"Where Tagged\"] = df.loc[df['Where Tagged'].str.contains(\"\\n\", na=False), \"Where Tagged\"].str.replace(\"\\n\", \" \")\n",
+    "df.loc[df['Where Tagged'].str.contains(\"/n\", na=False), \"Where Tagged\"] = df.loc[df['Where Tagged'].str.contains(\"/n\", na=False), \"Where Tagged\"].str.replace(\"/n\", \" \")\n",
     "df2 = df['Where Tagged'].str.split(', ', expand=True, n=1)\n",
     "df2.columns = ['tag_city', 'Tag State']\n",
     "df2.loc[df2['Tag State'] == 'ONT', 'Tag State'] = 'Ontario'\n",
@@ -748,7 +748,7 @@
     }
    ],
    "source": [
-    "df.loc[df['Where Recovered'].str.contains(\"\\n\", na=False), \"Where Recovered\"] = df.loc[df['Where Recovered'].str.contains(\"\\n\", na=False), \"Where Recovered\"].str.replace(\"\\n\", \" \")\n",
+    "df.loc[df['Where Recovered'].str.contains(\"/n\", na=False), \"Where Recovered\"] = df.loc[df['Where Recovered'].str.contains(\"/n\", na=False), \"Where Recovered\"].str.replace(\"/n\", \" \")\n",
     "df3 = df['Where Recovered'].str.split(',', expand=True, n=1)\n",
     "df3.columns = ['report_city', 'Report State']\n",
     "df3['Report State'] = df3['Report State'].str.strip()\n",
@@ -918,7 +918,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>IV 301</td>\n",
-       "      <td>MN</td>\n",
+       "      <td>None</td>\n",
        "      <td>09/04/96</td>\n",
        "      <td>Michoacán</td>\n",
        "      <td>MEXICO</td>\n",
@@ -978,7 +978,7 @@
        "    <tr>\n",
        "      <th>70</th>\n",
        "      <td>HY 802</td>\n",
-       "      <td>OK</td>\n",
+       "      <td>None</td>\n",
        "      <td>09/30/96</td>\n",
        "      <td>OK</td>\n",
        "      <td>USA</td>\n",
@@ -1032,13 +1032,13 @@
       ],
       "text/plain": [
        "   Tag No. Tag State  Tag Date Report State Report Country Report Date   Miles\n",
-       "0   IV 301        MN  09/04/96    Michoacán         MEXICO    03/04/97  1760.0\n",
+       "0   IV 301      None  09/04/96    Michoacán         MEXICO    03/04/97  1760.0\n",
        "1   MC 648        IL  09/30/96    Michoacán         MEXICO     Feb. 97  1660.0\n",
        "2   EB 370        KS  09/18/96    Michoacán         MEXICO     Feb. 97  1375.0\n",
        "3   MK 276        KS  09/14/96    Michoacán         MEXICO     Feb. 97  1375.0\n",
        "4   KN 176        KS  09/12/96    Michoacán         MEXICO    03/10/97  1375.0\n",
        "..     ...       ...       ...          ...            ...         ...     ...\n",
-       "70  HY 802        OK  09/30/96           OK            USA    10/01/96     2.0\n",
+       "70  HY 802      None  09/30/96           OK            USA    10/01/96     2.0\n",
        "71  DP 521        KS  10/12/96           KS            USA    10/13/96     2.0\n",
        "72  DX 480        MN  10/12/96           MN            USA    10/12/96     1.0\n",
        "73  CT 641        TX  09/24/96           TX            USA    09/24/96     1.0\n",
@@ -1082,10 +1082,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# new_table.loc[new_table['Report State'].str.contains(r'\\s', na=False), 'Report State'].value_counts()\n",
-    "# new_table.loc[new_table['Tag State'].str.contains(r'\\s', na=False), 'Tag State'].value_counts()\n",
-    "# new_table.loc[new_table['Tag No.'].str.contains(r'\\s', na=False), 'Tag No.'].value_counts()\n",
-    "# new_table.loc[new_table['Report Country'].str.contains(r'\\s', na=False), 'Report Country'].value_counts()"
+    "# new_table.loc[new_table['Report State'].str.contains(r'/s', na=False), 'Report State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag State'].str.contains(r'/s', na=False), 'Tag State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag No.'].str.contains(r'/s', na=False), 'Tag No.'].value_counts()\n",
+    "# new_table.loc[new_table['Report Country'].str.contains(r'/s', na=False), 'Report Country'].value_counts()"
    ]
   },
   {
@@ -1143,11 +1143,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_pickle(\"Monarchs1996.pkl\")\n",
+    "new_table.to_pickle(\"pkl/Monarchs1996.pkl\")\n",
     "new_table.to_csv(\"csv/Monarchs1996.csv\")"
    ]
   }
