--- a/Data/Monarchs_1997_cleanup.ipynb
+++ b/Data/Monarchs_1997_cleanup.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = sqlite3.connect(\"Monarchs1997.db\")"
+    "db = sqlite3.connect(\"db/Monarchs1997.db\")"
    ]
   },
   {
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"1997 Season Summary.csv\")\n",
+    "df = pd.read_csv(\"csv/1997 Season Summary.csv\")\n",
     "\n",
     "        #convert pandas to SQL table\n",
     "df.to_sql(\"monarchs1997\", db, if_exists=\"replace\")\n",
@@ -92,7 +92,7 @@
        "      <td>index</td>\n",
        "      <td>ix_monarchs1997_index</td>\n",
        "      <td>monarchs1997</td>\n",
-       "      <td>3</td>\n",
+       "      <td>4</td>\n",
        "      <td>CREATE INDEX \"ix_monarchs1997_index\"ON \"monarc...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -109,7 +109,7 @@
       ],
       "text/plain": [
        "    type                   name      tbl_name  rootpage  \\\n",
-       "0  index  ix_monarchs1997_index  monarchs1997         3   \n",
+       "0  index  ix_monarchs1997_index  monarchs1997         4   \n",
        "1  table           monarchs1997  monarchs1997         2   \n",
        "\n",
        "                                                 sql  \n",
@@ -622,7 +622,7 @@
    "source": [
     "df2 = df['Where Tagged'].str.split(',', expand=True)\n",
     "df2.columns = ['tag_city', 'Tag State']\n",
-    "#df2.loc[df2['Tag State'].str.contains(r'\\s'), 'Tag State'].value_counts() #See if value contains spaces\n",
+    "#df2.loc[df2['Tag State'].str.contains(r'/s'), 'Tag State'].value_counts() #See if value contains spaces\n",
     "df2['Tag State'] = df2['Tag State'].str.strip()\n",
     "df2"
    ]
@@ -913,10 +913,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# new_table.loc[new_table['Report State'].str.contains(r'\\s', na=False), 'Report State'].value_counts()\n",
-    "# new_table.loc[new_table['Tag State'].str.contains(r'\\s', na=False), 'Tag State'].value_counts()\n",
-    "# new_table.loc[new_table['Tag No.'].str.contains(r'\\s', na=False), 'Tag No.'].value_counts()\n",
-    "# new_table.loc[new_table['Report Country'].str.contains(r'\\s', na=False), 'Report Country'].value_counts()"
+    "# new_table.loc[new_table['Report State'].str.contains(r'/s', na=False), 'Report State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag State'].str.contains(r'/s', na=False), 'Tag State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag No.'].str.contains(r'/s', na=False), 'Tag No.'].value_counts()\n",
+    "# new_table.loc[new_table['Report Country'].str.contains(r'/s', na=False), 'Report Country'].value_counts()"
    ]
   },
   {
@@ -978,7 +978,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_pickle(\"Monarchs1997.pkl\")\n",
+    "new_table.to_pickle(\"pkl/Monarchs1997.pkl\")\n",
     "new_table.to_csv(\"csv/Monarchs1997.csv\")"
    ]
   }
