--- a/Data/Monarchs_1999_cleanup.ipynb
+++ b/Data/Monarchs_1999_cleanup.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = sqlite3.connect(\"Monarchs1999.db\")"
+    "db = sqlite3.connect(\"db/Monarchs1999.db\")"
    ]
   },
   {
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"1999 Season Summary.csv\")\n",
+    "df = pd.read_csv(\"csv/1999 Season Summary.csv\")\n",
     "\n",
     "        #convert pandas to SQL table\n",
     "df.to_sql(\"monarchs1999\", db, if_exists=\"replace\")\n",
@@ -1169,14 +1169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# new_table.loc[new_table['Report State'].str.contains(r'\\s', na=False), 'Report State'].value_counts()\n",
-    "# new_table.loc[new_table['Tag State'].str.contains(r'\\s', na=False), 'Tag State'].value_counts()\n",
-    "# new_table.loc[new_table['Tag No.'].str.contains(r'\\s', na=False), 'Tag No.'].value_counts()\n",
-    "# new_table.loc[new_table['Report Country'].str.contains(r'\\s', na=False), 'Report Country'].value_counts()"
+    "# new_table.loc[new_table['Report State'].str.contains(r'/s', na=False), 'Report State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag State'].str.contains(r'/s', na=False), 'Tag State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag No.'].str.contains(r'/s', na=False), 'Tag No.'].value_counts()\n",
+    "# new_table.loc[new_table['Report Country'].str.contains(r'/s', na=False), 'Report Country'].value_counts()"
    ]
   },
   {
@@ -1188,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1205,7 +1205,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1218,7 +1218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1238,7 +1238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_pickle(\"Monarchs1999.pkl\")\n",
+    "new_table.to_pickle(\"pkl/Monarchs1999.pkl\")\n",
     "new_table.to_csv(\"csv/Monarchs1999.csv\")"
    ]
   }
