--- a/Data/Monarchs_2000_cleanup.ipynb
+++ b/Data/Monarchs_2000_cleanup.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,39 +13,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = sqlite3.connect(\"Monarchs2000.db\")"
+    "db = sqlite3.connect(\"db/Monarchs2000.db\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Arink\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py:2663: UserWarning: The spaces in these column names will not be changed. In pandas versions < 0.14, spaces were converted to underscores.\n",
-      "  method=method,\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "'C:\\\\Users\\\\Arink\\\\Desktop\\\\github\\\\CodeLou\\\\Monarchs\\\\Data'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(\"2000 Season Summary.csv\")\n",
+    "df = pd.read_csv(\"csv/2000 Season Summary.csv\")\n",
     "\n",
     "        #convert pandas to SQL table\n",
     "df.to_sql(\"monarchs2000\", db, if_exists=\"replace\")\n",
@@ -56,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +110,7 @@
        "1  CREATE TABLE \"monarchs2000\" (\\n\"index\" INTEGER...  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +260,7 @@
        "8    8            Miles     REAL        0       None   0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -454,7 +446,7 @@
        "[295 rows x 6 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +571,7 @@
        "[295 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -720,7 +712,7 @@
        "[295 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +915,7 @@
        "[295 rows x 7 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -945,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1116,7 @@
        "[295 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1137,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,14 +1145,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# new_table.loc[new_table['Report State'].str.contains(r'\\s', na=False), 'Report State'].value_counts()\n",
-    "# new_table.loc[new_table['Tag State'].str.contains(r'\\s', na=False), 'Tag State'].value_counts()\n",
-    "# new_table.loc[new_table['Tag No.'].str.contains(r'\\s', na=False), 'Tag No.'].value_counts()\n",
-    "# new_table.loc[new_table['Report Country'].str.contains(r'\\s', na=False), 'Report Country'].value_counts()"
+    "# new_table.loc[new_table['Report State'].str.contains(r'/s', na=False), 'Report State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag State'].str.contains(r'/s', na=False), 'Tag State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag No.'].str.contains(r'/s', na=False), 'Tag No.'].value_counts()\n",
+    "# new_table.loc[new_table['Report Country'].str.contains(r'/s', na=False), 'Report Country'].value_counts()"
    ]
   },
   {
@@ -1172,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1189,7 +1181,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1218,11 +1210,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_pickle(\"Monarchs2000.pkl\")\n",
+    "new_table.to_pickle(\"pkl/Monarchs2000.pkl\")\n",
     "new_table.to_csv(\"csv/Monarchs2000.csv\")"
    ]
   }
