--- a/Data/Monarchs_2001_cleanup.ipynb
+++ b/Data/Monarchs_2001_cleanup.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "db = sqlite3.connect(\"Monarchs2001.db\")"
+    "db = sqlite3.connect(\"db/Monarchs2001.db\")"
    ]
   },
   {
@@ -45,7 +45,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"2001 Season Summary.csv\")\n",
+    "df = pd.read_csv(\"csv/2001 Season Summary.csv\")\n",
     "\n",
     "        #convert pandas to SQL table\n",
     "df.to_sql(\"monarchs2001\", db, if_exists=\"replace\")\n",
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -763,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +942,7 @@
        "[1962 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,19 +971,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# new_table.loc[new_table['Report State'].str.contains(r'\\s', na=False), 'Report State'].value_counts()\n",
-    "# new_table.loc[new_table['Tag State'].str.contains(r'\\s', na=False), 'Tag State'].value_counts()\n",
-    "# new_table.loc[new_table['Tag No.'].str.contains(r'\\s', na=False), 'Tag No.'].value_counts()\n",
-    "# new_table.loc[new_table['Report Country'].str.contains(r'\\s', na=False), 'Report Country'].value_counts()"
+    "# new_table.loc[new_table['Report State'].str.contains(r'/s', na=False), 'Report State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag State'].str.contains(r'/s', na=False), 'Tag State'].value_counts()\n",
+    "# new_table.loc[new_table['Tag No.'].str.contains(r'/s', na=False), 'Tag No.'].value_counts()\n",
+    "# new_table.loc[new_table['Report Country'].str.contains(r'/s', na=False), 'Report Country'].value_counts()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1000,7 +1000,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1013,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,11 +1029,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_table.to_pickle(\"Monarchs2001.pkl\")\n",
+    "new_table.to_pickle(\"pkl/Monarchs2001.pkl\")\n",
     "new_table.to_csv(\"csv/Monarchs2001.csv\")"
    ]
   }
